--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,11 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	
-	<name>Acme One</name>
-	<description>This is our first project in of Design &amp; Testing.</description>
+	<name>Acme-L3-D01</name>
+	<description>This is the first deliverable for Design &amp; Testing.</description>
 
 	<groupId>Acme</groupId>	
-	<artifactId>Acme-One-23.1</artifactId>
+	<artifactId>Acme-L3-D01</artifactId>
 	<version>23.1</version>
 	<packaging>war</packaging>
 
