--- a/src/main/resources/profile.properties
+++ b/src/main/resources/profile.properties
@@ -10,8 +10,8 @@
 
 # HINT: insert your required application properties here
 
-acme.application.display-name 		= Acme One
-acme.application.name 				= acme-one
+acme.application.display-name 		= Acme L3 D01
+acme.application.name 				= acme-l3-d01
 acme.application.version 			= 23.1
 
 acme.runtime.base-moment			= 2022/07/30 00:00
