Fixed pom.xml and database configuration

--- a/src/main/resources/profile.properties
+++ b/src/main/resources/profile.properties
@@ -11,8 +11,8 @@
 # HINT: insert your required application properties here
 
 acme.application.display-name 		= Acme L3 D01
-acme.application.name 				= acme-l3-d01
-acme.application.version 			= 23.1
+acme.application.name 				= acme-l3
+acme.application.version 			= d01
 
 acme.runtime.base-moment			= 2022/07/30 00:00
 acme.runtime.servicing-time			= 2
